# c_matrix

./: CMakeLists.txt  avx_matrix_multiply.c  avx_matrix_multiply.h  avx_matrix_multiply_tests.c  avx_matrix_multiply_tests.h  block_matrix_multiply.c  block_matrix_multiply.h  gpu_matrix_multiply.cu  gpu_matrix_multiply.h  gpu_matrix_multiply_tests.c  gpu_matrix_multiply_tests.h  main.c  matrix.c  matrix.h  matrix_multiply.cu  matrix_multiply.h  matrix_test.c  matrix_test.h  naive_matrix_multiply.c  naive_matrix_multiply.h  naive_memory_aligned_matrix_multiply.c  naive_memory_aligned_matrix_multiply.h
